force-app/main/default/objects/Feedback__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>