force-app/main/default/objects/Feedback__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>TextArea</type>
</CustomField>