force-app/main/default/objects/Feedback__c/fields/Feedback_Process__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Process__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>Reviewed but not Actioned</fullName>
            </value>
            <value>
                <fullName>Reviewed and Actioned</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>